--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-i18next": "^12.1.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "typescript": "^4.7.4",
     "web-vitals": "^3.1.1"
   },
@@ -56,6 +57,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "3.0.0",
     "@graphql-codegen/client-preset": "2.0.0",
-    "@graphql-codegen/introspection": "3.0.0"
+    "@graphql-codegen/introspection": "3.0.0",
+    "@types/styled-components": "^5.1.26"
   }
 }
