--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "graphql-ws": "^5.11.3",
     "i18next": "^22.4.10",
     "i18next-browser-languagedetector": "^7.0.1",
+    "mobx": "^6.10.2",
+    "mobx-react-lite": "^4.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
