--- a/package.json
+++ b/package.json
@@ -3,32 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.7.8",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.0",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.3",
-    "@testing-library/jest-dom": "^5.16.4",
+    "@apollo/client": "^3.8.3",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.8",
+    "@mui/material": "^5.14.8",
+    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.14.0",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "graphql": "^16.6.0",
-    "graphql-ws": "^5.11.3",
-    "i18next": "^22.4.10",
-    "i18next-browser-languagedetector": "^7.0.1",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.5.9",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "graphql": "^16.8.0",
+    "graphql-ws": "^5.14.0",
+    "i18next": "^23.5.0",
+    "i18next-browser-languagedetector": "^7.1.0",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.1.5",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
-    "typescript": "^4.7.4",
-    "web-vitals": "^3.1.1"
+    "react-i18next": "^13.2.2",
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.0.7",
+    "typescript": "^5.2.2",
+    "web-vitals": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,6 +59,7 @@
     "@graphql-codegen/cli": "3.0.0",
     "@graphql-codegen/client-preset": "2.0.0",
     "@graphql-codegen/introspection": "3.0.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/styled-components": "^5.1.26"
   }
 }
