--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -27,7 +27,7 @@ jobs:
       - name: SSH into the server and delete old files
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: hawkings.dev
+          host: ssh.hawkings.dev
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: rm -rf /var/www/matchapp/html/*
@@ -35,7 +35,7 @@ jobs:
       - name: Copy files to server
         uses: appleboy/scp-action@v0.1.4
         with:
-          host: hawkings.dev
+          host: ssh.hawkings.dev
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "build/"
